# gnome-mysql-manager

./: ChangeLog  HACKING  Makefile.am  README  acinclude.m4  configure.ac  experiment.py  mysql-manager.glade  mysql-manager.glade.bak  mysql-manager.gladep  mysql-manager.py
mysql-manager/: Makefile.am  gnome-mysql-manager.in  mysql-manager.glade.in  mysql-manager.py  mysqlmanagerconfig.py.in
trunk/: AUTHORS  ChangeLog  HACKING  INSTALL  autogen.sh  configure.ac  experiment.py  mysql-manager.glade  mysql-manager.py
trunk/mysql-manager/: mysql-manager.glade.in  mysql-manager.py
trunk/pixmaps/: Makefile.am
