##############################################################################
#
# gnome-mysql-manager - Simple tool for managing MySQL database.
# Copyright (C) 2006  Rouslan Solomakhin
#
#   Makefile.am: Input for automake.
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307
# USA
#
# $Id: Makefile.am 17 2006-10-23 17:17:01Z Rouslan.Solomakhin $
#
##############################################################################

pixmapsdir = $(datadir)/pixmaps/gnome-mysql-manager
pixmaps_DATA = tool.png

EXTRA_DIST = $(pixmaps_DATA)

MAINTAINERCLEANFILES = Makefile.in
